fix margin dark mode button

--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ nav {
 
 }
 
+nav ul{
+    margin-right: 10px;
+}
+
 nav ul li {
     margin-top: 5px;
     display: inline-block;
